--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/Search.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/Search.cshtml
@@ -56,7 +56,7 @@
             <option value="False">否</option>
         </select>
         break;
-    case System.ComponentModel.DataAnnotations.CustomDataType.Sex:
+    case System.ComponentModel.DataAnnotations.CustomDataType.Gender:
         <select class="form-control" name="Search.@Model.ClrName">
             <option value="" selected="selected"></option>
             <option value="True">男</option>
